--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Politicas de privacidad de Troost."
+      name="Esto es una pagigina propiedad de troost"
+      content="Terminos y condiciones de Troost."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Politicas de privacidad</title>
+    <title>Terminos y condiciones</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
